--- a/src/index.html
+++ b/src/index.html
@@ -165,6 +165,6 @@
   </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
-  <script src="app/script.js" type="module"></script>
+  <script type="module" src="js/app.js"></script>
 </body>
 </html>
