--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,12 @@
           <h1 class="logo__title"><span>Mamma</span>Mia!</h1>
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
-        <!-- Nawigation -->
+          <!-- Nawigation -->
         <div class="main-nav">
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
         </div>
-      <!--  Cart -->
+          <!--  Cart -->
         <div id="cart" class="cart">
           <div class="cart__summary">
             <span class="cart__total-number">0</span>
@@ -60,7 +60,7 @@
       </div>
     </div>
   </header>
-
+      <!--- Pages-->
   <div id="pages">
     <section id="order">
       <div id="product-list" class="product-list container"></div>
@@ -70,7 +70,7 @@
     </section>
   </div>
  
-
+    <!---  CartProduct-->
   <script id="template-cart-product" type="text/x-handlebars-template">
     <li>
       <div class="widget-amount"> <!-- widget-amount -->
