--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
         <div class="main-nav">
+          <a href="#home">Home</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
         </div>
@@ -60,6 +61,9 @@
     </div>
   </header>
   <div id="pages">
+    <section id="home">
+      <div class="home-wrapper container"></div>
+    </section>
     <section id="order">
       <div id="product-list" class="product-list container"></div>
     </section>
@@ -67,6 +71,8 @@
       <div class="booking-wrapper container"></div>
     </section>
   </div>
+  <script id="template-home-page" type="text/x-handlebars-template"></script>
+  
   <script id="template-cart-product" type="text/x-handlebars-template">
     <li>
       <div class="widget-amount"> <!-- widget-amount -->
