--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="./vendor/range-slider.min.css">
+  <link rel="stylesheet" href="./vendor/flickity.min.css" media='screen'>
   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -72,7 +73,41 @@
     </section>
   </div>
   <script id="template-home-page" type="text/x-handlebars-template"></script>
-  
+    <section class="links header">
+      <a href="#order">
+        <figure>
+          <img src="./images/assets/pizza-1.jpg" alt="pizza">
+        </figure>
+        Order online
+      </a>
+      <a href="#booking">
+        Booking a table
+        <figure>
+          <img src="./images/assets/pizza-2.jpg" alt="pizza">
+        </figure>
+      </a>
+    </section>
+    <section class="open-hours header">
+      <h3>Opening hours: </h3>
+      <p>Tue - Sun, 12PM - 12AM</p>
+    </section>
+    <section class="carousel">
+      <div class="main-carousel">
+        <div class="carousel-cell">
+          <h3>Great venue</h3>
+          <p>lorem 10</p>
+        </div>
+        <div class="carousel-cell">
+          <h3>Best service</h3>
+          <p>lorem 10</p>
+        </div>
+        <div class="carousel-cell">
+          <h3>Delicious food</h3>
+          <p>lorem 10</p>
+        </div>
+      </div>
+    </section>
+
   <script id="template-cart-product" type="text/x-handlebars-template">
     <li>
       <div class="widget-amount"> <!-- widget-amount -->
@@ -244,6 +279,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="vendor/range-slider.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="./vendor/flickity.pkgd.min.js"></script>
   <script type="module" src="js/app.js"></script>
 </body>
 </html>
