--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
   <title>Pizzeria</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="./vendor/range-slider.min.css">
-  <link rel="stylesheet" href="./vendor/flickity.min.css" media="screen">
+  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -72,62 +73,70 @@
       <div class="booking-wrapper container"></div>
     </section>
   </div>
-  <script id="template-home-page" type="text/x-handlebars-template"></script>
-  <section class="links">
-    <div class="box-large">
-      <div class="box box-one">
-        <a href="#order" class="button-link">
-          <h2>ORDER ONLINE</h2>
-        </a>
-      </div>
-      <div class="box box-two">
-        <a href="#booking" class="button-link">
-          <h2>BOOK A TABLE</h2>
-        </a>
-      </div>
-    </div>
-    <div class="box-large">
-      <div class="box-hours">
-        <h2>OPENING HOURS: </h2>
-        <h3>Tue - Sun, 12PM - 12AM</h3>
-      </div>
-    </div>
-  </section>
-  <section class="carousel">
-    <div class="main-carousel" data-flickity="{ autoPlay: true }">
-      <div class="carousel-cell">
-        <div class="carousel-img">
-          <img src="./images/assets/pizza-3.jpg" alt="quotes">
+  <script id="template-home-page" type="text/x-handlebars-template">
+    <section class="links">
+      <div class="box-large">
+        <div class="box box-one">
+          <a href="#order" class="button-link">
+            <h2>ORDER ONLINE</h2>
+          </a>
         </div>
-        <div class="opinion">
-          <h3 class="opinion-header">Great venue</h3>
-          <p class="quote">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, earum.</p>
-          <p class="author">Mark</p>
+        <div class="box box-two">
+          <a href="#booking" class="button-link">
+            <h2>BOOK A TABLE</h2>
+          </a>
         </div>
       </div>
-      <div class="carousel-cell">
-        <div class="carousel-img">
-          <img src="./images/assets/pizza-3.jpg" alt="quotes">
-        </div>
-        <div class="opinion">
-          <h3 class="opinion-header">Best service</h3>
-          <p class="quote">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, earum.</p>
-          <p class="author">Emily</p>
+      <div class="box-large">
+        <div class="box-hours">
+          <h2>OPENING HOURS: </h2>
+          <h3>Tue - Sun, 12PM - 12AM</h3>
         </div>
       </div>
-      <div class="carousel-cell">
-        <div class="carousel-img">
-          <img src="./images/assets/pizza-3.jpg" alt="quotes">
+    </section>
+    <section class="carousel">
+      <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 3000, "wrapAround": true }'>
+        <div class="carousel-cell">
+          <div class="carousel-img">
+            <img src="./images/assets/pizza-3.jpg" alt="quotes">
+          </div>
+          <div class="opinion">
+            <h3 class="opinion-header">Great venue</h3>
+            <p class="quote">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, earum.</p>
+            <p class="author">Mark</p>
+          </div>
         </div>
-        <div class="opinion">
-          <h3 class="opinion-header">Delicious food</h3>
-          <p class="quote">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, earum.</p>
-          <p class="author">Peter</p>
+        <div class="carousel-cell">
+          <div class="carousel-img">
+            <img src="./images/assets/pizza-3.jpg" alt="quotes">
+          </div>
+          <div class="opinion">
+            <h3 class="opinion-header">Best service</h3>
+            <p class="quote">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, earum.</p>
+            <p class="author">Emily</p>
+          </div>
+        </div>
+        <div class="carousel-cell">
+          <div class="carousel-img">
+            <img src="./images/assets/pizza-3.jpg" alt="quotes">
+          </div>
+          <div class="opinion">
+            <h3 class="opinion-header">Delicious food</h3>
+            <p class="quote">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, earum.</p>
+            <p class="author">Peter</p>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-
+    </section>
+    <section class="gallery-home">
+      <img src="./images/assets/pizza-4.jpg" alt="gallery">
+      <img src="./images/assets/pizza-5.jpg" alt="gallery">
+      <img src="./images/assets/pizza-6.jpg" alt="gallery">
+      <img src="./images/assets/pizza-7.jpg" alt="gallery">
+      <img src="./images/assets/pizza-8.jpg" alt="gallery">
+      <img src="./images/assets/pizza-9.jpg" alt="gallery">
+    </section>
+  </script>
   <script id="template-cart-product" type="text/x-handlebars-template">
     <li>
       <div class="widget-amount"> <!-- widget-amount -->
@@ -299,7 +308,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="vendor/range-slider.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-  <script src="./vendor/flickity.pkgd.min.js"></script>
+  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   <script type="module" src="js/app.js"></script>
 </body>
 </html>
