--- a/src/index.html
+++ b/src/index.html
@@ -129,12 +129,48 @@
       </div>
     </section>
     <section class="gallery-home">
-      <img src="./images/assets/pizza-4.jpg" alt="gallery">
-      <img src="./images/assets/pizza-5.jpg" alt="gallery">
-      <img src="./images/assets/pizza-6.jpg" alt="gallery">
-      <img src="./images/assets/pizza-7.jpg" alt="gallery">
-      <img src="./images/assets/pizza-8.jpg" alt="gallery">
-      <img src="./images/assets/pizza-9.jpg" alt="gallery">
+      <div class="gallery-image">
+        <img src="./images/assets/pizza-4.jpg" alt="gallery">
+        <div class="overlay">
+          <a href="#"><i class="fas fa-heart"></i></a>
+          <a href="#"><i class="fas fa-share-alt"></i></a>
+        </div>
+      </div>  
+      <div class="gallery-image">
+        <img src="./images/assets/pizza-5.jpg" alt="gallery">
+        <div class="overlay">
+          <a href="#"><i class="fas fa-heart"></i></a>
+          <a href="#"><i class="fas fa-share-alt"></i></a>
+        </div>
+      </div>  
+      <div class="gallery-image">
+        <img src="./images/assets/pizza-6.jpg" alt="gallery">
+        <div class="overlay">
+          <a href="#"><i class="fas fa-heart"></i></a>
+          <a href="#"><i class="fas fa-share-alt"></i></a>
+        </div>
+      </div>  
+      <div class="gallery-image">
+        <img src="./images/assets/pizza-7.jpg" alt="gallery">
+        <div class="overlay">
+          <a href="#"><i class="fas fa-heart"></i></a>
+          <a href="#"><i class="fas fa-share-alt"></i></a>
+        </div>
+      </div>  
+      <div class="gallery-image">
+        <img src="./images/assets/pizza-8.jpg" alt="gallery">
+        <div class="overlay">
+          <a href="#"><i class="fas fa-heart"></i></a>
+          <a href="#"><i class="fas fa-share-alt"></i></a>
+        </div>
+      </div>
+      <div class="gallery-image">
+        <img src="./images/assets/pizza-9.jpg" alt="gallery">
+        <div class="overlay">
+          <a href="#"><i class="fas fa-heart"></i></a>
+          <a href="#"><i class="fas fa-share-alt"></i></a>
+        </div>
+      </div>
     </section>
   </script>
   <script id="template-cart-product" type="text/x-handlebars-template">
