--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
   </header>
   <div id="pages">
     <section id="home">
-      <div class="home-wrapper container"></div>
+      <div id="home-wrapper" class="home-wrapper container"></div>
     </section>
     <section id="order">
       <div id="product-list" class="product-list container"></div>
@@ -74,104 +74,106 @@
     </section>
   </div>
   <script id="template-home-page" type="text/x-handlebars-template">
-    <section class="links">
-      <div class="box-large">
-        <div class="box box-one">
-          <a href="#order" class="button-link">
-            <h2>ORDER ONLINE</h2>
-          </a>
-        </div>
-        <div class="box box-two">
-          <a href="#booking" class="button-link">
-            <h2>BOOK A TABLE</h2>
-          </a>
-        </div>
-      </div>
-      <div class="box-large">
-        <div class="box-hours">
-          <h2>OPENING HOURS: </h2>
-          <h3>Tue - Sun, 12PM - 12AM</h3>
-        </div>
-      </div>
-    </section>
-    <section class="carousel">
-      <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 3000, "wrapAround": true }'>
-        <div class="carousel-cell">
-          <div class="carousel-img">
-            <img src="./images/assets/pizza-3.jpg" alt="quotes">
+    <div class="homePage">
+      <div class="links section">
+        <div class="box-large links-box">
+          <div class="box box-one">
+            <a href="#order" class="button-link">
+              <h2 class="button-text">ORDER ONLINE</h2>
+            </a>
           </div>
-          <div class="opinion">
-            <h3 class="opinion-header">Great venue</h3>
-            <p class="quote">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, earum.</p>
-            <p class="author">Mark</p>
+          <div class="box box-two">
+            <a href="#booking" class="button-link">
+              <h2 class="button-text">BOOK A TABLE</h2>
+            </a>
           </div>
         </div>
-        <div class="carousel-cell">
-          <div class="carousel-img">
-            <img src="./images/assets/pizza-3.jpg" alt="quotes">
-          </div>
-          <div class="opinion">
-            <h3 class="opinion-header">Best service</h3>
-            <p class="quote">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, earum.</p>
-            <p class="author">Emily</p>
-          </div>
-        </div>
-        <div class="carousel-cell">
-          <div class="carousel-img">
-            <img src="./images/assets/pizza-3.jpg" alt="quotes">
-          </div>
-          <div class="opinion">
-            <h3 class="opinion-header">Delicious food</h3>
-            <p class="quote">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, earum.</p>
-            <p class="author">Peter</p>
+        <div class="box-large">
+          <div class="box-hours">
+            <h2>OPENING HOURS: </h2>
+            <h3>Tue - Sun, 12PM - 12AM</h3>
           </div>
         </div>
       </div>
-    </section>
-    <section class="gallery-home">
-      <div class="gallery-image">
-        <img src="./images/assets/pizza-4.jpg" alt="gallery">
-        <div class="overlay">
-          <a href="#"><i class="fas fa-heart"></i></a>
-          <a href="#"><i class="fas fa-share-alt"></i></a>
-        </div>
-      </div>  
-      <div class="gallery-image">
-        <img src="./images/assets/pizza-5.jpg" alt="gallery">
-        <div class="overlay">
-          <a href="#"><i class="fas fa-heart"></i></a>
-          <a href="#"><i class="fas fa-share-alt"></i></a>
-        </div>
-      </div>  
-      <div class="gallery-image">
-        <img src="./images/assets/pizza-6.jpg" alt="gallery">
-        <div class="overlay">
-          <a href="#"><i class="fas fa-heart"></i></a>
-          <a href="#"><i class="fas fa-share-alt"></i></a>
-        </div>
-      </div>  
-      <div class="gallery-image">
-        <img src="./images/assets/pizza-7.jpg" alt="gallery">
-        <div class="overlay">
-          <a href="#"><i class="fas fa-heart"></i></a>
-          <a href="#"><i class="fas fa-share-alt"></i></a>
-        </div>
-      </div>  
-      <div class="gallery-image">
-        <img src="./images/assets/pizza-8.jpg" alt="gallery">
-        <div class="overlay">
-          <a href="#"><i class="fas fa-heart"></i></a>
-          <a href="#"><i class="fas fa-share-alt"></i></a>
+      <div class="carousel section">
+        <div class="main-carousel">
+          <div class="carousel-cell">
+            <div class="carousel-img">
+              <img src="./images/assets/pizza-3.jpg" alt="quotes">
+            </div>
+            <div class="opinion">
+              <h3 class="opinion-header">Great venue</h3>
+              <q class="quote">Nice place and good food, we'll definitely come back.</q>
+              <p class="author">Mark</p>
+            </div>
+          </div>
+          <div class="carousel-cell">
+            <div class="carousel-img">
+              <img src="./images/assets/pizza-3.jpg" alt="quotes">
+            </div>
+            <div class="opinion">
+              <h3 class="opinion-header">Best service</h3>
+              <q class="quote">I'm very satisfied with the service, I could feel special here and eat delicious pizza!</q>
+              <p class="author">Emily</p>
+            </div>
+          </div>
+          <div class="carousel-cell">
+            <div class="carousel-img">
+              <img src="./images/assets/pizza-3.jpg" alt="quotes">
+            </div>
+            <div class="opinion">
+              <h3 class="opinion-header">Delicious food</h3>
+              <q class="quote">They have delicious pizza, I can feel there like on Italian holiday!</q>
+              <p class="author">Peter</p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="gallery-image">
-        <img src="./images/assets/pizza-9.jpg" alt="gallery">
-        <div class="overlay">
-          <a href="#"><i class="fas fa-heart"></i></a>
-          <a href="#"><i class="fas fa-share-alt"></i></a>
+      <div class="gallery-home section">
+        <div class="gallery-image">
+          <img src="./images/assets/pizza-4.jpg" alt="gallery">
+          <div class="overlay">
+            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-share-alt"></i></a>
+          </div>
+        </div>  
+        <div class="gallery-image">
+          <img src="./images/assets/pizza-5.jpg" alt="gallery">
+          <div class="overlay">
+            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-share-alt"></i></a>
+          </div>
+        </div>  
+        <div class="gallery-image">
+          <img src="./images/assets/pizza-6.jpg" alt="gallery">
+          <div class="overlay">
+            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-share-alt"></i></a>
+          </div>
+        </div>  
+        <div class="gallery-image">
+          <img src="./images/assets/pizza-7.jpg" alt="gallery">
+          <div class="overlay">
+            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-share-alt"></i></a>
+          </div>
+        </div>  
+        <div class="gallery-image">
+          <img src="./images/assets/pizza-8.jpg" alt="gallery">
+          <div class="overlay">
+            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-share-alt"></i></a>
+          </div>
+        </div>
+        <div class="gallery-image">
+          <img src="./images/assets/pizza-9.jpg" alt="gallery">
+          <div class="overlay">
+            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-share-alt"></i></a>
+          </div>
         </div>
       </div>
-    </section>
+    </div>
   </script>
   <script id="template-cart-product" type="text/x-handlebars-template">
     <li>
