Add attributes links in html code, add methods initActions, initFavoriteImage and initShare in class Home

--- a/src/index.html
+++ b/src/index.html
@@ -133,42 +133,42 @@
         <div class="gallery-image">
           <img src="./images/assets/pizza-4.jpg" alt="gallery">
           <div class="overlay">
-            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-heart" data-id="1"></i></a>
             <a href="#"><i class="fas fa-share-alt"></i></a>
           </div>
         </div>  
         <div class="gallery-image">
           <img src="./images/assets/pizza-5.jpg" alt="gallery">
           <div class="overlay">
-            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-heart" data-id="2"></i></a>
             <a href="#"><i class="fas fa-share-alt"></i></a>
           </div>
         </div>  
         <div class="gallery-image">
           <img src="./images/assets/pizza-6.jpg" alt="gallery">
           <div class="overlay">
-            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-heart" data-id="3"></i></a>
             <a href="#"><i class="fas fa-share-alt"></i></a>
           </div>
         </div>  
         <div class="gallery-image">
           <img src="./images/assets/pizza-7.jpg" alt="gallery">
           <div class="overlay">
-            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-heart" data-id="4"></i></a>
             <a href="#"><i class="fas fa-share-alt"></i></a>
           </div>
         </div>  
         <div class="gallery-image">
           <img src="./images/assets/pizza-8.jpg" alt="gallery">
           <div class="overlay">
-            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-heart" data-id="5"></i></a>
             <a href="#"><i class="fas fa-share-alt"></i></a>
           </div>
         </div>
         <div class="gallery-image">
           <img src="./images/assets/pizza-9.jpg" alt="gallery">
           <div class="overlay">
-            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-heart" data-id="6"></i></a>
             <a href="#"><i class="fas fa-share-alt"></i></a>
           </div>
         </div>
